Now it shows a div saying info not found when api fails in loading streaming availabilty

--- a/results.html
+++ b/results.html
@@ -20,7 +20,7 @@
           <div class="navbar-item">
             <form class="field has-addons">
               <input type=text id="user-input" name="user-input" placeholder="Enter your movie" class="input">
-              <button type=submit class="button" aria-haspopup="true">🔎</button>
+              <button type=submit class="button modal-button" aria-haspopup="true">🔎</button>
           </form>
           </div>
         </div>
