adding Cesar's watchlist edits and styling up the buttons

--- a/results.html
+++ b/results.html
@@ -32,7 +32,7 @@
     <main class="section columns">
       <div class="column is-three-quarters">
         <div class="box">
-          <div id="maintitle" class="is-flex is-justify-content-center is-align-content-center">
+          <div id="maintitle" class="is-flex is-justify-content-center is-align-items-center">
             <h1 id="title" class="title is-2 has-text-centered">Title</h1> 
             <button id="list-button" class="fas fa-plus-circle"> </button>          
           </div>
