editing styles, and adding links to the streaming icons

--- a/results.html
+++ b/results.html
@@ -42,11 +42,11 @@
           <div class="mt-5">
             <p class="is-size-4 has-text-weight-semibold">Where to Watch</p>
             <div class="streaming-imgs">
-              <img id="netflix" src="./assets/imgs/netflix-white.svg" alt="Netflix" data-active="false" class="">
-              <img id="prime" src="./assets/imgs/prime-white.svg" alt="Prime video" data-active="false" class="">
-              <img id="disney" src="./assets/imgs/disney-white.svg" alt="Disney Plus" data-active="false" class="">
-              <img id="hbo" src="./assets/imgs/hbo-white.svg" alt="HBO Max" data-active="false" class="">
-              <img id="apple" src="./assets/imgs/apple-white.svg" alt="Apple TV" data-active="false" class="">
+              <a id="netflix-url" target="blank"><img id="netflix" src="./assets/imgs/netflix-white.svg" alt="Netflix" data-active="false" class=""></a>
+              <a id="prime-url" target="blank"><img id="prime" src="./assets/imgs/prime-white.svg" alt="Prime video" data-active="false" class=""></a>
+              <a id="disney-url" target="blank"><img id="disney" src="./assets/imgs/disney-white.svg" alt="Disney Plus" data-active="false" class=""></a>
+              <a id="hbo-url" target="blank"><img id="hbo" src="./assets/imgs/hbo-white.svg" alt="HBO Max" data-active="false" class=""></a>
+              <a id="apple-url" target="blank"><img id="apple" src="./assets/imgs/apple-white.svg" alt="Apple TV" data-active="false" class=""></a>
             </div>
           </div>
           <div class="mt-2">
