added homepage with some minor adjustments

--- a/results.html
+++ b/results.html
@@ -66,7 +66,7 @@
     <div class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
-        <div class="box" id="movie-container">
+        <div class="box" id="movie-container" style="color:white">
         <!--Here goes the movies-->
        </div>
       </div>
