--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="/index.html">
+        <a class="navbar-item" href="/nxt-movie">
           <p class="is-size-4">NXT MOVIE</p>
         </a>
       </div>
